...
      <Animated.ScrollView
        style={[styles.container, getAnimStyle(scrollAnim)]}
        contentContainerStyle={styles.scrollContent}
      >
        <ProfileIcon thumbnail={profile.thumbnail} />
        <View style={styles.formControlContainer}>
          <ReadOnlyFormControl label="User Name" formValue={profile.username} />
          <ReadOnlyFormControl label="Email" formValue={profile.email} />
          <ReadOnlyFormControl
            label="Link Social Accounts"
            showSocialAccounts
            socialAccounts={profile.socialAccounts}
            onPressLinkAccount={onPressLinkAccount}
          />
        </View>
        <View style={styles.border} />
        <CancelButton
          containerClassName={styles.logoutButton}
          label="LOGOUT"
          onPress={onPressLogout}
        />
        <CancelButton
          containerClassName={styles.deleteAccountButton}
          labelClassName={styles.deleteAccountLabel}
          label="DELETE ACCOUNT"
...
