...

export default function CloseButton({ onPress, testID }: CloseButtonProps) {
  return (
    <Pressable
      style={styles.container}
      onPress={onPress}
      testID={testID || 'close-button'}
    >
      <Icon
        component={Ionicons}
        name={'close-sharp' as IoniconsIconName}
        size={40}
        style={styles.icon}
...
