...
            name="repeat"
            size={22}
            style={isLooping ? styles.icon : styles.disabledIcon}
          />
        </RippleButton>
      )}
      <RippleButton onPress={onPlayPause} size={80} testID="player-play-button">
        <Icon
          component={FontAwesome6}
          name={isPlaying ? 'pause' : 'play'}
          size={32}
          style={[styles.icon, !isPlaying && styles.playIcon]}
        />
...
