...
  };

  const headerItems: HeaderToolBarButton[] = [
    { ...HEADER_TOOLBAR_TEMPLATES.back, onPress: handleGoBack },
    {
      ...HEADER_TOOLBAR_TEMPLATES.headerTitle,
      headerTitle: 'REGISTER',
    },
  ];

  const thumbnail = thumbnailUri ? { uri: thumbnailUri } : undefined;

  return (
...
            thumbnail={thumbnail}
            editable
            onPressUpload={handlePickThumbnail}
          />
          <View style={styles.formContainer}>
            <EditableFormControl
              label="User Name"
              darkMode
              formValue={username}
              onChangeText={setUsername}
              placeholder={PLACEHOLDERS.register.usernameInput}
            />
            <EditableFormControl
              label="Email"
              darkMode
              formValue={email}
              onChangeText={setEmail}
              placeholder={PLACEHOLDERS.register.emailInput}
            />
            <EditableFormControl
              label="Password"
              darkMode
              secureTextEntry
              formValue={password}
              onChangeText={setPassword}
              placeholder={PLACEHOLDERS.register.passwordInput}
            />
          </View>
          <SubmitButton
            containerClassName={styles.submitButton}
            label="CREATE"
            onPress={handleSendCode}
            disabled={!username || !email || !password}
          />
          <View style={styles.dividerContainer}>
            <View style={styles.dividerLine} />
            <Text style={styles.dividerText}>OR</Text>
...
