...
      hideLoading();
    }

    Alert.alert(
      'パスワードをリセットしました',
      'パスワードをリセットしましたので、再度ログイン画面にてメールアドレスとパスワードを入力してください',
      [{ text: 'OK', onPress: () => navigation.navigate('SignIn') }],
    );
  };

  const headerItems: HeaderToolBarButton[] = [
    { ...HEADER_TOOLBAR_TEMPLATES.back, onPress: handleGoBack },
    {
      ...HEADER_TOOLBAR_TEMPLATES.headerTitle,
      headerTitle: 'PASSWORD RESET',
    },
  ];

  return (
    <TouchableWithoutFeedback onPress={Keyboard.dismiss} accessible={false}>
      <View style={styles.container}>
...
                onChangeText={setEmail}
                placeholder={PLACEHOLDERS.passwordReset.emailInput}
              />
            </View>
            <SubmitButton
              containerClassName={styles.submitButton}
              label="SEND CODE"
              onPress={handleSendCode}
              disabled={!email}
            />
          </>
        ) : (
          <>
...
